# shai

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
.agents/skills/nbai-local-dev/: SKILL.md
.codex/: config.toml
.github/workflows/: ci.yml  ingest.yml
backend/: .env.example  Dockerfile  README.md  examples.http  postman_collection.json  pyproject.toml  quick_peek.py  requirements.txt
backend/app/: auth.py  cache.py  cache_helpers.py  config.py  dependencies.py  logging.py  main.py  middleware.py  rate_limit.py  resolvers.py  schemas.py  serving_cache.py  supabase.py  utils.py
backend/app/api/: responses.py  routes.py
backend/app/services/: nba.py  news.py  store.py
backend/nba_data_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth.py  test_cache.py  test_cache_helpers.py  test_config.py  test_integration_optional.py  test_logging.py  test_middleware.py  test_news_service.py  test_rate_limit.py  test_resolver.py  test_routes_helpers.py  test_services_games.py  test_services_new_endpoints.py  test_services_players.py  test_services_team_stats.py  test_serving_cache.py  test_store_boxscore.py  test_store_fetch_player_stats.py  test_store_user_accounts.py  test_supabase.py  test_utils.py
database/: compare_schema_exports.py  schema.sql  sql_editor_schema_export.sql
database/supabase/.temp/: pooler-url  project-ref
frontend/: .env.example  README.md  auth.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(main)/: loading.tsx  page.tsx
frontend/components/: AwardSummaryChips.tsx  AwardsAccordion.tsx  HeaderNavCluster.tsx  HeroSearch.tsx  LeagueStandings.tsx  LocalGameTime.tsx  MagicBentoLeaderboardGrid.css  MagicBentoLeaderboardGrid.tsx  PasswordAuthForms.tsx  PlayerCareerResume.tsx  PlayerProfileSearch.tsx  ProfileAccountForm.tsx  ScoreCard.tsx  ShinyText.jsx  StarBorder.tsx  TextType.tsx  ThemeToggle.tsx
frontend/lib/: authActions.ts  gameUtils.ts  nbaApi.ts  profileActions.ts  profileFormState.ts  supabaseAuth.ts  userAccountsApi.ts  utils.ts
frontend/public/: robots.txt  sitemap.txt
frontend/test/components/: AwardsAccordion.test.tsx  HeaderNavCluster.test.tsx  HeroSearch.test.tsx  LeagueStandings.test.tsx  PlayerCareerResume.test.tsx  (+3 more)
frontend/types/: next-auth.d.ts
ml/: README.md  __init__.py  requirements.txt
ml/training/: __init__.py
workers/: cache.js  nba_api_bridge.py  package-lock.json  package.json  worker-live.js  worker.env.example
workers/tests/: cache.test.js  worker-live.test.js
(+30 files in other folders)
