[project]
name = "nba-data-api"
version = "0.1.0"
description = "Production-ready FastAPI wrapper around nba_api stats endpoints."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.1",
    "nba_api>=1.4.1",
    "pandas>=2.1.0",
    "rapidfuzz>=3.5.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.0",
    "ruff>=0.1.5",
    "black>=23.9.1",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "Q"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
