[project]
name = "nba-data-api"
version = "0.1.0"
description = "Production-ready FastAPI wrapper around nba_api stats endpoints."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic-settings>=2.13.1",
    "nba_api>=1.11.4",
    "pandas>=3.0.2",
    "rapidfuzz>=3.14.5",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.20.0",
    "ruff>=0.15.9",
    "black>=26.3.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "Q"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
